Refactor HTML and JavaScript for improved structure

--- a/public/home/index.html
+++ b/public/home/index.html
@@ -22,7 +22,8 @@
 
     body {
       margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        sans-serif;
       background: #d2cab6;
       color: var(--text-main);
       min-height: 100vh;
@@ -71,7 +72,6 @@
       gap: 12px;
       font-size: 13px;
       text-transform: uppercase;
-      flex-wrap: wrap;
     }
 
     nav a {
@@ -149,7 +149,6 @@
       color: var(--text-muted);
       text-transform: uppercase;
       letter-spacing: 0.07em;
-      white-space: nowrap;
     }
 
     .badge.admin {
@@ -189,7 +188,9 @@
     }
 
     @media (max-width: 720px) {
-      .grid { grid-template-columns: minmax(0, 1fr); }
+      .grid {
+        grid-template-columns: minmax(0, 1fr);
+      }
     }
 
     .feature-card-link {
@@ -251,6 +252,7 @@
       nav {
         width: 100%;
         justify-content: flex-start;
+        flex-wrap: wrap;
       }
       .welcome-card {
         flex-direction: column;
@@ -259,7 +261,6 @@
     }
   </style>
 </head>
-
 <body>
   <header>
     <div>
@@ -279,14 +280,15 @@
     </nav>
 
     <div id="auth-bar">
-      <button id="logout-btn" type="button">Log Out</button>
+      <div id="auth-info">Signed in as …</div>
+      <button id="logout-btn">Log Out</button>
     </div>
   </header>
 
   <main>
     <div class="welcome-card">
       <div>
-        <h3 id="welcome-title">Welcome</h3>
+        <h3>Welcome to Troop 248 Portal</h3>
         <p>
           This private site is for Troop 248 Scouts, parents, and adult leaders.
           Use the sections below to get where you need to go quickly.
@@ -299,7 +301,6 @@
 
     <section>
       <h2>Troop Resources</h2>
-
       <div class="grid">
         <a href="/calendar" class="feature-card-link">
           <div class="feature-card">
@@ -380,6 +381,16 @@
             </p>
           </div>
         </a>
+
+        <a href="/accountinfo" class="feature-card-link">
+          <div class="feature-card">
+            <div class="feature-badge">Your Account</div>
+            <h3 class="feature-title">Account Info</h3>
+            <p class="feature-text">
+              View and edit account info.
+            </p>
+          </div>
+        </a>
       </div>
 
       <div class="quick-note">
@@ -389,95 +400,82 @@
   </main>
 
   <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-  import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-  import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import {
+      getAuth,
+      onAuthStateChanged,
+      signOut
+    } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+    import {
+      getFirestore,
+      doc,
+      getDoc
+    } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyD5qUHa2JuQ3iI7U3DrX7JDyhx76PGzhxM",
-    authDomain: "troop-248.firebaseapp.com",
-    projectId: "troop-248",
-    storageBucket: "troop-248.firebasestorage.app",
-    messagingSenderId: "925363875752",
-    appId: "1:925363875752:web:0b001c1a7a09fb8232f79d",
-    measurementId: "G-NY75GX5TBH"
-  };
+    const firebaseConfig = {
+      apiKey: "AIzaSyD5qUHa2JuQ3iI7U3DrX7JDyhx76PGzhxM",
+      authDomain: "troop-248.firebaseapp.com",
+      projectId: "troop-248",
+      storageBucket: "troop-248.firebasestorage.app",
+      messagingSenderId: "925363875752",
+      appId: "1:925363875752:web:0b001c1a7a09fb8232f79d",
+      measurementId: "G-NY75GX5TBH"
+    };
 
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
-  const db = getFirestore(app);
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
 
-  const logoutBtn = document.getElementById("logout-btn");
-  const roleBadgeContainer = document.getElementById("role-badge-container");
-  const welcomeTitleEl = document.getElementById("welcome-title");
+    const authInfoEl = document.getElementById("auth-info");
+    const logoutBtn = document.getElementById("logout-btn");
+    const roleBadgeContainer = document.getElementById("role-badge-container");
 
-  function clean(v) {
-    return (typeof v === "string") ? v.trim() : "";
-  }
+    let currentUser = null;
+    let currentIsAdmin = false;
 
-  function displayNameFrom(info, user) {
-    const full = clean(info?.fullName);
-    if (full) return full;
-
-    const first = clean(info?.firstName);
-    const last = clean(info?.lastName);
-    const combined = clean(`${first} ${last}`);
-    if (combined) return combined;
-
-    return user?.email || user?.uid || "Member";
-  }
-
-  function setBadge(authRole) {
-    const isAdmin = authRole === "admin";
-    roleBadgeContainer.innerHTML = `
-      <span class="badge ${isAdmin ? "admin" : ""}">
-        ${isAdmin ? "Admin" : "Viewer"}
-      </span>
-    `;
-  }
-
-  onAuthStateChanged(auth, async (user) => {
-    if (!user) {
-      window.location.href = "/";
-      return;
+    function updateUI() {
+      if (currentUser) {
+        authInfoEl.textContent = `Signed in as ${currentUser.email}`;
+        roleBadgeContainer.innerHTML = `
+          <span class="badge ${currentIsAdmin ? "admin" : ""}">
+            ${currentIsAdmin ? "Admin" : "Viewer"}
+          </span>`;
+      }
     }
 
-    // Default immediately so you NEVER see blank "Welcome"
-    welcomeTitleEl.textContent = `Welcome, ${user.email || "Member"}`;
-    setBadge("viewer");
+    async function handleAuth(user) {
+      if (!user) {
+        window.location.href = "/";
+        return;
+      }
 
-    try {
       const infoRef = doc(db, "accountInfo", user.uid);
-      const snap = await getDoc(infoRef);
+      const infoSnap = await getDoc(infoRef);
 
-      if (!snap.exists()) {
+      if (!infoSnap.exists()) {
         window.location.href = "/under-review/";
         return;
       }
 
-      const info = snap.data() || {};
-      const role = info.authRole;
+      const data = infoSnap.data();
+      const role = data.authRole;
 
       if (role !== "admin" && role !== "viewer") {
         window.location.href = "/under-review/";
         return;
       }
 
-      const name = displayNameFrom(info, user);
-      welcomeTitleEl.textContent = `Welcome, ${name}`;
-      setBadge(role);
-
-      console.log("HOME loaded accountInfo:", { uid: user.uid, role, name, info });
-    } catch (err) {
-      console.error("HOME failed to load accountInfo:", err);
-      // Keep fallback welcome+email
+      currentUser = user;
+      currentIsAdmin = role === "admin";
+      updateUI();
     }
-  });
 
-  logoutBtn.addEventListener("click", async () => {
-    await signOut(auth);
-    window.location.href = "/";
-  });
-</script>
+    onAuthStateChanged(auth, handleAuth);
+
+    logoutBtn.addEventListener("click", async () => {
+      await signOut(auth);
+      window.location.href = "/";
+    });
+  </script>
 </body>
 </html>
