--- a/public/home/index.html
+++ b/public/home/index.html
@@ -381,6 +381,16 @@
             </p>
           </div>
         </a>
+
+         <a href="/accountinfo" class="feature-card-link">
+          <div class="feature-card">
+            <div class="feature-badge">Account</div>
+            <h3 class="feature-title">Account Info</h3>
+            <p class="feature-text">
+              View and edit personal account info.
+            </p>
+          </div>
+        </a>
       </div>
 
       <div class="quick-note">
