--- a/public/under-review/index.html
+++ b/public/under-review/index.html
@@ -86,6 +86,12 @@
       If you believe this is taking too long, please contact your Scoutmaster
       or troop committee for assistance.
     </p>
+    <p>
+      To test if you have been approved yet, click "Go to Home".
+    </p>  
+    <button onclick="window.location.href='/'">
+    Go to Home
+</button>
     <button id="logout-btn">Log Out</button>
   </div>
 
