--- a/public/under-review/index.html
+++ b/public/under-review/index.html
@@ -83,8 +83,7 @@
     </p>
     <span class="badge">Pending Review</span>
     <p style="margin-top: 10px;">
-      If you believe this is taking too long, please contact your Scoutmaster
-      or troop committee for assistance.
+      If you believe this is taking too long, please contact Dukes at (912) 217-3143, dukes@troop-248.com, or spl@troop-248.com
     </p>
     <p>
       To test if you have been approved yet, click "Go to Home".
