--- a/public/users/index.html
+++ b/public/users/index.html
@@ -3,132 +3,156 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Users — Troop 248</title>
+  <title>Troop 248 — Users</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/png" href="/bsafavicon.ico">
 
   <style>
-    :root{
-      --red:#b22222;
-      --blue:#1f4e79;
-      --tan:#d2cab6;
-      --tan-2:#efe8d6;
-      --white:#ffffff;
-      --text:#1f2933;
-      --muted:#6b7280;
-      --shadow:0 10px 25px rgba(0,0,0,.08);
-      --radius:16px;
-      --pill:999px;
-      --max:1100px;
+    :root {
+      --red: #b22222;
+      --blue: #1f4e79;
+      --tan: #f4eee3;
+      --white: #ffffff;
+      --text-main: #1f2933;
+      --text-muted: #6b7280;
+      --radius-lg: 16px;
+      --radius-pill: 999px;
+      --shadow-soft: 0 10px 25px rgba(0, 0, 0, 0.06);
     }
 
-    *{ box-sizing:border-box; }
-    body{
-      margin:0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      background: linear-gradient(180deg, var(--tan-2), var(--tan));
-      color:var(--text);
+    * { box-sizing: border-box; }
+
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background: #d2cab6;
+      color: var(--text-main);
+      min-height: 100vh;
     }
 
-    header{
-      background: linear-gradient(90deg, var(--red), var(--white), var(--blue));
-      padding: 18px 16px;
-      box-shadow: var(--shadow);
+    /* ✅ Header / Nav matches your Home page */
+    header {
+      background: linear-gradient(120deg, #b22222, #ffffff, #1f4e79);
+      color: var(--white);
+      padding: 14px 24px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
       position: sticky;
       top: 0;
       z-index: 10;
     }
 
-    .header-inner{
-      max-width: var(--max);
-      margin: 0 auto;
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:12px;
+    header h2 {
+      margin: 0;
+      font-size: 19px;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+      display: flex;
+      align-items: center;
+      gap: 8px;
     }
 
-    .brand{
-      display:flex;
-      align-items:baseline;
-      gap:10px;
-      color:#111;
-    }
-    .brand h1{
-      margin:0;
+    header h2::before {
+      content: "★";
       font-size: 18px;
-      letter-spacing:.2px;
-      font-weight: 800;
     }
-    .brand span{
+
+    .troop-home-link {
+      text-decoration: none;
+      color: inherit;
+      display: inline-flex;
+      align-items: center;
+    }
+    .troop-home-link:hover h2 {
+      opacity: 0.9;
+      text-decoration: underline;
+    }
+
+    nav {
+      display: flex;
+      gap: 12px;
       font-size: 13px;
-      color:#111;
-      opacity:.75;
-      font-weight:600;
+      text-transform: uppercase;
     }
 
-    .top-actions{
-      display:flex;
-      align-items:center;
-      gap:10px;
+    nav a {
+      color: #1f4e79;
+      font-weight: bold;
+      text-decoration: none;
+      padding: 6px 10px;
+      border-radius: var(--radius-pill);
+      border: 1px solid rgba(255, 255, 255, 0.25);
+      backdrop-filter: blur(4px);
+      opacity: 0.9;
+    }
+
+    nav a:hover {
+      opacity: 1;
+      background: rgba(255, 255, 255, 0.12);
+    }
+
+    #auth-bar {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      font-size: 13px;
+    }
+
+    #logout-btn {
+      padding: 5px 12px;
+      font-size: 13px;
+      border-radius: var(--radius-pill);
+      border: 1px solid rgba(255, 255, 255, 0.7);
+      background: rgba(255, 255, 255, 0.1);
+      color: var(--white);
+      cursor: pointer;
+    }
+
+    #logout-btn:hover {
+      background: rgba(255, 255, 255, 0.2);
+    }
+
+    main {
+      padding: 24px 16px 40px;
+      max-width: 960px;
+      margin: 0 auto;
+    }
+
+    /* Existing page cards keep your tan/red/blue look (no redesign) */
+    .card {
+      background: rgba(255, 255, 255, 0.95);
+      border-radius: var(--radius-lg);
+      padding: 18px 18px 16px;
+      margin-bottom: 18px;
+      box-shadow: var(--shadow-soft);
+      border: 1px solid rgba(148, 163, 184, 0.4);
+    }
+
+    .row {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 12px;
       flex-wrap: wrap;
-      justify-content:flex-end;
     }
 
-    .btn{
-      border:0;
-      padding:10px 12px;
-      border-radius: var(--pill);
-      background: rgba(255,255,255,.85);
-      box-shadow: 0 6px 16px rgba(0,0,0,.10);
-      color:#111;
-      font-weight: 700;
-      cursor:pointer;
-      text-decoration:none;
-      display:inline-flex;
-      align-items:center;
-      gap:8px;
-      line-height:1;
-    }
-    .btn:active{ transform: translateY(1px); }
-    .btn.secondary{
-      background: rgba(255,255,255,.65);
-      font-weight: 700;
+    .muted { color: var(--text-muted); }
+    .small { font-size: 13px; }
+
+    .hr {
+      height: 1px;
+      background: rgba(0,0,0,.08);
+      margin: 12px 0;
     }
 
-    main{
-      max-width: var(--max);
-      margin: 18px auto 56px;
-      padding: 0 16px;
+    .searchbar {
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+      align-items: center;
     }
 
-    .card{
-      background: rgba(255,255,255,.72);
-      backdrop-filter: blur(6px);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-      padding: 16px;
-      margin-bottom: 14px;
-      border: 1px solid rgba(0,0,0,.06);
-    }
-
-    .row{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:12px;
-      flex-wrap:wrap;
-    }
-
-    .muted{ color: var(--muted); }
-    .small{ font-size: 13px; }
-
-    .searchbar{
-      display:flex;
-      gap:10px;
-      flex-wrap:wrap;
-      align-items:center;
-    }
     input[type="search"]{
       width: min(520px, 100%);
       padding: 12px 14px;
@@ -138,6 +162,7 @@
       background: rgba(255,255,255,.85);
       font-size: 14px;
     }
+
     select{
       padding: 12px 12px;
       border-radius: 12px;
@@ -146,43 +171,57 @@
       font-size: 14px;
     }
 
-    .grid{
-      display:grid;
+    .grid {
+      display: grid;
       grid-template-columns: repeat(12, 1fr);
-      gap: 12px;
+      gap: 14px;
+      margin-top: 8px;
     }
-    .user-card{
+
+    .user-card {
       grid-column: span 6;
-      padding: 14px;
-      cursor:pointer;
-      transition: transform .08s ease;
+      border-radius: 14px;
+      padding: 12px 12px 10px;
+      border: 1px solid rgba(209,213,219,.9);
+      background: #f9fafb;
+      box-shadow: 0 4px 12px rgba(0,0,0,.04);
+      transition: transform .1s ease, box-shadow .1s ease, border-color .1s ease;
+      cursor: pointer;
     }
-    .user-card:hover{ transform: translateY(-1px); }
+
+    .user-card:hover {
+      transform: translateY(-1px);
+      box-shadow: 0 8px 20px rgba(0,0,0,.06);
+      border-color: rgba(148,163,184,.9);
+    }
+
     @media (max-width: 820px){
-      .user-card{ grid-column: span 12; }
+      .user-card { grid-column: span 12; }
     }
 
     .tag{
       display:inline-flex;
       align-items:center;
       gap:6px;
-      padding: 6px 10px;
-      border-radius: var(--pill);
-      font-weight: 800;
+      padding: 4px 10px;
+      border-radius: var(--radius-pill);
+      font-weight: 700;
       font-size: 12px;
-      background: rgba(31,78,121,.10);
+      background: rgba(31,78,121,.08);
       color: var(--blue);
+      text-transform: uppercase;
+      letter-spacing: .07em;
       border: 1px solid rgba(31,78,121,.18);
     }
-    .tag.red{
-      background: rgba(178,34,34,.10);
-      color: var(--red);
-      border-color: rgba(178,34,34,.18);
+    .tag.admin{
+      background: rgba(240, 180, 41, 0.16);
+      color: #92400e;
+      border: 1px solid rgba(245, 158, 11, 0.6);
     }
     .tag.gray{
-      background: rgba(107,114,128,.12);
-      color: #374151;
-      border-color: rgba(107,114,128,.18);
+      background: rgba(148, 163, 184, 0.2);
+      color: var(--text-muted);
+      border: 1px solid rgba(148, 163, 184, 0.35);
     }
 
     .loading{
@@ -202,10 +241,10 @@
       50%{ transform: scale(1.2); opacity:.9; }
     }
 
-    .hr{
-      height:1px;
-      background: rgba(0,0,0,.08);
-      margin: 12px 0;
+    .error{
+      border: 1px solid rgba(178,34,34,.25);
+      background: rgba(178,34,34,.08);
+      color: #7f1d1d;
     }
 
     .link{
@@ -215,25 +254,43 @@
     }
     .link:hover{ text-decoration: underline; }
 
-    .error{
-      border: 1px solid rgba(178,34,34,.25);
-      background: rgba(178,34,34,.08);
-      color: #7f1d1d;
+    @media (max-width: 640px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 8px;
+      }
+      nav {
+        width: 100%;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+      }
     }
   </style>
 </head>
 
 <body>
   <header>
-    <div class="header-inner">
-      <div class="brand">
-        <h1>Troop 248</h1>
-        <span>Users</span>
-      </div>
-      <div class="top-actions">
-        <a class="btn secondary" href="/home/">Home</a>
-        <button id="logoutBtn" class="btn" type="button">Log out</button>
-      </div>
+    <div>
+      <a href="/home" class="troop-home-link">
+        <h2>Troop 248</h2>
+      </a>
+    </div>
+
+    <nav>
+      <a href="/calendar">Calendar</a>
+      <a href="/documents">Documents</a>
+      <a href="/scoutmaster">SM Blog</a>
+      <a href="/spl-blog">SPL Blog</a>
+      <a href="/useful-links">Useful Links</a>
+      <a href="/events">Events</a>
+      <a href="/mail">Mail</a>
+      <a href="/users">Users</a>
+    </nav>
+
+    <div id="auth-bar">
+      <div id="auth-info">Signed in as …</div>
+      <button id="logout-btn" type="button">Log Out</button>
     </div>
   </header>
 
@@ -241,12 +298,14 @@
     <div class="card" id="statusCard">
       <div class="row">
         <div>
-          <div style="font-weight:900;">Directory</div>
+          <div style="font-weight:900; font-size:18px;">Users</div>
           <div class="muted small" id="roleLine">Checking access…</div>
         </div>
         <div class="tag gray" id="roleTag">Loading</div>
       </div>
+
       <div class="hr"></div>
+
       <div class="searchbar">
         <input id="searchInput" type="search" placeholder="Search by name or email…" autocomplete="off" />
         <select id="typeFilter">
@@ -274,20 +333,8 @@
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js";
-    import {
-      getAuth,
-      onAuthStateChanged,
-      signOut
-    } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js";
-    import {
-      getFirestore,
-      doc,
-      getDoc,
-      collection,
-      getDocs,
-      query,
-      orderBy
-    } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-firestore.js";
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js";
+    import { getFirestore, doc, getDoc, collection, getDocs, query, orderBy } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-firestore.js";
 
     // ✅ MUST match exactly
     const firebaseConfig = {
@@ -304,9 +351,11 @@
     const auth = getAuth(app);
     const db = getFirestore(app);
 
+    const authInfoEl = document.getElementById("auth-info");
+    const logoutBtn = document.getElementById("logout-btn");
+
     const roleLine = document.getElementById("roleLine");
     const roleTag  = document.getElementById("roleTag");
-    const logoutBtn = document.getElementById("logoutBtn");
 
     const loadingCard = document.getElementById("loadingCard");
     const errorCard = document.getElementById("errorCard");
@@ -331,7 +380,7 @@
       if (role === "admin") {
         roleLine.textContent = "Approved: Admin (full access)";
         roleTag.textContent = "Admin";
-        roleTag.className = "tag red";
+        roleTag.className = "tag admin";
       } else if (role === "viewer") {
         roleLine.textContent = "Approved: Viewer (read-only)";
         roleTag.textContent = "Viewer";
@@ -358,7 +407,6 @@
     }
 
     function normalizeRole(authRole){
-      // ✅ Rules logic: only admin/viewer are approved; anything else = pending
       const r = (authRole || "").toString().trim().toLowerCase();
       if (r === "admin") return "admin";
       if (r === "viewer") return "viewer";
@@ -373,20 +421,14 @@
     }
 
     function guardOrRedirect(user, role){
-      // ✅ Auth guard required on every page
       if (!user) {
-        window.location.replace("/"); // login page
+        window.location.replace("/");
         return false;
       }
-
-      // ✅ FIX: viewers MUST be allowed here.
-      // Only redirect pending users.
       if (role !== "admin" && role !== "viewer") {
         window.location.replace("/under-review/");
         return false;
       }
-
-      // ✅ Allowed: admin OR viewer
       return true;
     }
 
@@ -407,11 +449,11 @@
 
       usersGrid.innerHTML = filtered.map(u => {
         const acct = (u.accountType || "unknown").toLowerCase();
-        const tagClass = acct === "leader" ? "tag red" : (acct === "parent" ? "tag" : "tag gray");
-        const acctLabel = acct.charAt(0).toUpperCase() + acct.slice(1);
+        const tagClass = acct === "leader" ? "tag admin" : (acct === "parent" ? "tag" : "tag gray");
+        const acctLabel = acct ? (acct.charAt(0).toUpperCase() + acct.slice(1)) : "Unknown";
 
         return `
-          <div class="card user-card" data-uid="${escapeHtml(u.uid)}" role="button" tabindex="0" aria-label="Open user">
+          <div class="user-card" data-uid="${escapeHtml(u.uid)}" role="button" tabindex="0" aria-label="Open user">
             <div class="row">
               <div style="min-width: 220px;">
                 <div style="font-weight: 900; font-size: 16px;">${escapeHtml(u.fullName || "Unnamed")}</div>
@@ -420,9 +462,7 @@
               <div class="${tagClass}">${escapeHtml(acctLabel)}</div>
             </div>
             <div class="hr"></div>
-            <div class="small muted">
-              Phone: ${escapeHtml(u.phone || "—")}
-            </div>
+            <div class="small muted">Phone: ${escapeHtml(u.phone || "—")}</div>
           </div>
         `;
       }).join("");
@@ -450,20 +490,17 @@
               <div style="font-weight:900; font-size:18px;">${escapeHtml(u.fullName || "Unnamed")}</div>
               <div class="muted small">${escapeHtml(u.email || "")}</div>
             </div>
-            <a class="btn secondary" href="/users/">Back</a>
+            <a class="link" href="/users/">Back</a>
           </div>
           <div class="hr"></div>
           <div class="small"><strong>Account Type:</strong> ${escapeHtml(u.accountType || "—")}</div>
           <div class="small"><strong>Phone:</strong> ${escapeHtml(u.phone || "—")}</div>
-          <div class="small muted" style="margin-top:10px;">
-            UID: ${escapeHtml(u.uid)}
-          </div>
+          <div class="small muted" style="margin-top:10px;">UID: ${escapeHtml(u.uid)}</div>
         </div>
       `;
     }
 
     async function loadUsers(){
-      // Order by name if present; if not, Firestore will still return docs
       const qy = query(collection(db, "accountInfo"), orderBy("fullName"));
       const snap = await getDocs(qy);
 
@@ -487,7 +524,7 @@
       });
 
       searchInput.addEventListener("input", () => {
-        if (getQueryParam("u")) return; // don't re-render list when in detail
+        if (getQueryParam("u")) return;
         renderList();
       });
 
@@ -516,21 +553,19 @@
 
     onAuthStateChanged(auth, async (user) => {
       try {
-        // Always decide role first, then guard.
         if (!user) {
           window.location.replace("/");
           return;
         }
 
+        authInfoEl.textContent = `Signed in as ${user.email}`;
+
         const role = await getMyRole(user.uid);
         setRoleUI(role);
 
-        // ✅ FIXED GUARD: allow admin OR viewer; redirect only pending
         if (!guardOrRedirect(user, role)) return;
 
-        // Now load page content (safe for both viewer + admin)
         await loadUsers();
-
         loadingCard.style.display = "none";
 
         const uidParam = getQueryParam("u");
