--- a/public/patrols/index.html
+++ b/public/patrols/index.html
@@ -438,8 +438,7 @@
 
         <div class="col12">
           <div class="row">
-            <button class="btn primary" id="assignBtn" type="button">Assign</button>
-            <button class="btn danger" id="clearBtn" type="button">Clear patrol</button>
+            <button class="btn danger" id="assignBtn" type="button">Assign</button>
           </div>
           <div class="note" id="assignStatus" style="margin-top:10px;"></div>
         </div>
