Update and rename index.html to index.html

--- a/public/roster/index.html
+++ b/public/roster/index.html
@@ -1,9 +1,9 @@
-<!-- /public/users/index.html -->
+<!-- /public/roster/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Troop 248 — Users</title>
+  <title>Troop 248 — Roster</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/png" href="/bsafavicon.ico">
 
@@ -387,7 +387,7 @@
     <div class="card" id="listHeaderCard">
       <div class="row">
         <div>
-          <div style="font-weight:900; font-size:18px;">Users</div>
+          <div style="font-weight:900; font-size:18px;">Roster</div>
           <div class="muted small" id="roleLine">Checking access…</div>
         </div>
         <div class="tag gray" id="roleTag">Loading</div>
