--- a/public/home/index.html
+++ b/public/home/index.html
@@ -372,6 +372,26 @@
           </div>
         </a>
 
+        <a href="/roster" class="feature-card-link">
+          <div class="feature-card">
+            <div class="feature-badge">Roster</div>
+            <h3 class="feature-title">Roster</h3>
+            <p class="feature-text">
+              View contact info for anyone in the troop.
+            </p>
+          </div>
+        </a>
+
+        <a href="/patrols" class="feature-card-link">
+          <div class="feature-card">
+            <div class="feature-badge">Patrols</div>
+            <h3 class="feature-title">Patrols</h3>
+            <p class="feature-text">
+              View scout accounts and assigned patrols.
+            </p>
+          </div>
+        </a>
+
         <a href="/report" class="feature-card-link">
           <div class="feature-card">
             <div class="feature-badge">Report</div>
